# PaperRadar

./: .gitignore  PRD.md  README.md  ROADMAP.md
backend/: .env.example  README.md  pyproject.toml
backend/src/paperradar/: __init__.py
backend/src/paperradar/index/: db.py  embed.py  load.py  schema.sql
backend/src/paperradar/ingest/: openreview.py
backend/src/paperradar/normalize/: models.py  openreview.py
backend/src/paperradar/retrieve/: dense.py
docs/: architecture.md  data-sources.md  evaluation.md
