[project]
name = "paperradar"
version = "0.1.0"
description = "Retrieval-first RAG over OpenReview peer reviews"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Lucas Ye" }]
dependencies = [
    "openreview-py>=1.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperradar"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
